# agentcore_demo

./: .gitignore  LICENSE  README.md
00-claudecode_agent/: CLAUDE.md  Dockerfile  README.md  assume-role-policy.json  claude_code_agent.py  claude_code_agent_2.py  env.sample  package-lock.json  pre_setup.sh  pyproject.toml  utils.py
03-GA-new-features/: pyproject.toml
03-GA-new-features/01-A2A/: Dockerfile  deploy_ochestrator.py  deploy_subagents.py  test_leadagent.py  test_subagent.py
03-GA-new-features/01-A2A/agents/: orchestrator.py  requirements.txt  strands_aws_blogs_news.py  strands_aws_docs.py
03-GA-new-features/01-A2A/helpers/: utils.py
03-GA-new-features/02-MCP-as-Gateway/: Dockerfile  add_cognito_gateway.py  add_midway_gateway.py  add_target.py  cleanup-cognito-user-auth.sh  deploy_gateway_s2s.py  mcp_server.py  setup_cognito_s2s.sh  setup_cognito_user_auth.sh  test-oauth-flow.sh  test-user-auth.sh  test_gateway.py  test_mcp.py  test_target.py
03-GA-new-features/02-MCP-as-Gateway/agentcore_mcp_quip/: .agentcore.json  Dockerfile  FASTMCP_MIGRATION.md  MCP_SDK_IMPLEMENTATION.md  deploy_quip_mcp.py  mcp_server_quip.py  quip.py  requirements.txt  start_remote_mcp_fastmcp.py  test_mcp_protocol.py
03-GA-new-features/03-memory/: langgraph_agent.py  memory_branching.py  requirements.txt
04-PressureTest/: pyproject.toml
04-PressureTest/runtime/: AGENTCORE_USAGE.md  ARCHITECTURE.md  METRICS_GUIDE.md  README_TEST.md  SYSTEM_STATS.md  TROUBLESHOOTING.md  agentcore_fixtest.json  agentcore_http_oauth.json  debug_422.py  get_stats.py  idp_setup.sh  test_client.py
04-PressureTest/runtime/src/: .bedrock_agentcore copy.yaml  .dockerignore  Dockerfile  agent_entry.py  pyproject.toml
05-mcp-proxy/: README.md  SECRETS_SETUP.md  pyproject.toml  test_agentcore.py  test_client.py  test_client2.py
05-mcp-proxy/src/: pyproject.toml  server.py
06-agentcore_harness/myresearchagent/app/myresearchagent_myresearchagentAgent/: EXPORT_NOTES.md  main.py  pyproject.toml
09-eval-optimization/: .gitignore  README.md  README.zh.md  config.json  deployment.json  preflight.py  pyproject.toml  requirements.txt
09-eval-optimization/.supergoal/agentcore-harness-eval-optimization-clos-us4IuK/: PROTOCOL.md  ROADMAP.md  STATE.md  THINKING.md  applied-memories.md  applied-skills.md  context.md  tools.md
09-eval-optimization/.supergoal/agentcore-harness-eval-optimization-clos-us4IuK/phases/: phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  (+1 more)
09-eval-optimization/agent/: harness_tools.py  main.py  orders.py  prompts.py  runtime_config.py
09-eval-optimization/dataset/: eval_prompts.json
09-eval-optimization/docs/: CONCEPTS.md  动手指南.md
09-eval-optimization/results/: baseline_scores.json  baseline_sessions.json  comparison.json  improved_scores.json  improved_sessions.json  recommendation.json
09-eval-optimization/scripts/: _common.py  ab_test.py  capture_deployment.py  compare.py  generate_sessions.py  harness_agent.py  harness_create.py  invoke_deployed.py  run_evaluation.py  run_optimization.py  teardown.py
09-eval-optimization/tests/: test_harness_tools.py  test_tools.py
(+82 files in other folders)
